ev2 extension and scope binding support added

--- a/NuGet.config
+++ b/NuGet.config
@@ -3,5 +3,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="Local" value="C:\Users\sargammonga\OneDrive - Microsoft\Documents\Local-Nuget-Packages" />
   </packageSources>
 </configuration>
