--- a/src/Bicep.RegistryModuleTool.UnitTests/Bicep.RegistryModuleTool.UnitTests.csproj
+++ b/src/Bicep.RegistryModuleTool.UnitTests/Bicep.RegistryModuleTool.UnitTests.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Bicep.Types.Ev2" Version="1.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
