--- a/src/Bicep.RegistryModuleTool/Bicep.RegistryModuleTool.csproj
+++ b/src/Bicep.RegistryModuleTool/Bicep.RegistryModuleTool.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Bicep.Types.Ev2" Version="1.0.2" />
     <PackageReference Include="DiffPlex" Version="1.7.1" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
     <PackageReference Include="JsonPath.Net" Version="0.2.1" />
